--- a/src/main/resources/FXML/sidebar_NV.fxml
+++ b/src/main/resources/FXML/sidebar_NV.fxml
@@ -4,15 +4,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.BorderPane?>
-<BorderPane prefWidth="322" xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="ui.controllers.SidebarController_NV"
-            styleClass="sidebar">
+<BorderPane prefWidth="322" styleClass="sidebar" stylesheets="@../CSS/sidebar_QL.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.SidebarController_NV">
 
     <!-- Phần trên cùng -->
     <top>
@@ -27,8 +23,8 @@
                     </ImageView>
                     <VBox alignment="CENTER">
                         <children>
-                            <Label styleClass="username" text="Đỗ Minh Quân"/>
-                            <Label styleClass="role" text="Quản Lí"/>
+                            <Label styleClass="username" text="Đỗ Minh Quân" />
+                            <Label styleClass="role" text="Quản Lí" />
                         </children>
                     </VBox>
                 </children>
@@ -38,32 +34,61 @@
 
     <!-- Phần menu chính -->
     <center>
-        <VBox fx:id="menuContainer" spacing="8" alignment="TOP_CENTER">
-            <Button styleClass="menu-item" text="  ⚙  DASHBOARD"/>
-            <Button fx:id="btnQuanLiDatBan" onAction="#toggleSubMenu"
-                    styleClass="menu-item" text="  ⚙  QUẢN LÍ ĐẶT BÀN"/>
+        <VBox fx:id="menuContainer" alignment="TOP_CENTER" spacing="8">
+            <Button styleClass="menu-item" text="  ⚙  DASHBOARD" />
+            <Button fx:id="btnQuanLiDatBan" onAction="#toggleSubMenu" styleClass="menu-item" text="  ⚙  QUẢN LÍ ĐẶT BÀN" />
 
             <!-- Submenu -->
-            <VBox fx:id="subMenuDatBan" alignment="CENTER" spacing="5"
-                  visible="false" managed="false">
-                <Button styleClass="sub-btn" text="Đặt Bàn"/>
-                <Button styleClass="sub-btn" text="Check In"/>
-                <Button styleClass="sub-btn" text="Check Out"/>
-                <Button styleClass="sub-btn" text="Cập Nhật Đơn Bàn"/>
+            <VBox fx:id="subMenuDatBan" alignment="CENTER" managed="false" prefHeight="190.0" prefWidth="274.0" spacing="5" visible="false">
+                <Button prefWidth="327.0" styleClass="sub-btn" text="Đặt Bàn">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../IMG/icon/bill.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+                <Button styleClass="sub-btn" text="Check In">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../IMG/icon/checkmark.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+                <Button styleClass="sub-btn" text="Check Out">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../IMG/icon/checkout.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+                <Button styleClass="sub-btn" text="Cập Nhật Đơn Bàn">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../IMG/icon/chair.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
             </VBox>
 
-            <Button styleClass="menu-item" text="  ⚙  QUẢN LÍ THÀNH VIÊN"/>
-            <Button styleClass="menu-item" text="  ⚙  TRA CỨU"/>
-            <Button styleClass="menu-item" text="  ⚙  HỖ TRỢ"/>
+            <Button styleClass="menu-item" text="  ⚙  QUẢN LÍ THÀNH VIÊN" />
+            <Button styleClass="menu-item" text="  ⚙  TRA CỨU" />
+            <Button styleClass="menu-item" text="  ⚙  HỖ TRỢ" />
         </VBox>
     </center>
 
     <!-- Nút cố định dưới cùng -->
     <bottom>
         <VBox alignment="CENTER" style="-fx-padding: 15 0 20 0;">
-            <Button prefWidth="185" styleClass="logout-btn" text="Kết Ca"/>
+            <Button prefWidth="185" styleClass="logout-btn" text="Kết Ca" />
         </VBox>
     </bottom>
 
 </BorderPane>
-
