--- a/src/main/resources/CSS/dashboard.css
+++ b/src/main/resources/CSS/dashboard.css
@@ -1,5 +1,5 @@
 .dashboard-bg {
-    -fx-background-color: #f4f4f4;
+    -fx-background-color: #d9d9d9;
 }
 
 .info-card {
@@ -52,7 +52,7 @@
 
 /* --- Thẻ chứa toàn bộ thông báo --- */
 .notification-card {
-    -fx-background-color: #ffffff;
+    -fx-background-color: #f1f1f1;
     -fx-background-radius: 12;
     -fx-border-color: #dcdcdc;
     -fx-border-radius: 12;
@@ -60,16 +60,21 @@
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 6, 0, 2, 2);
     -fx-padding: 16;
 }
-
-/* --- Tiêu đề 🔔 Thông Báo --- */
 .subtitle {
-    -fx-font-size: 18px;
+    -fx-font-size: 24px;
     -fx-font-weight: bold;
     -fx-text-fill: #333;
-    -fx-underline: true;
 }
 
-/* --- Thông báo lỗi (đỏ) --- */
+.borderNotice {
+    -fx-border-color: black;
+    -fx-border-width: 2;
+    -fx-border-radius: 8;
+    -fx-background-radius: 8;
+    -fx-background-color: #f9fbff;
+    -fx-padding: 10;
+}
+
 .alert-red {
     -fx-background-color: #ffe6e6;
     -fx-border-color: #ff4d4d;
@@ -81,7 +86,6 @@
     -fx-pref-width: 220px;
 }
 
-/* --- Thông báo thành công (xanh lá) --- */
 .alert-green {
     -fx-background-color: #e6ffe6;
     -fx-border-color: #33cc33;
@@ -95,18 +99,25 @@
 
 /* --- Thẻ chung cho tất cả thống kê --- */
 .stat-card {
-    -fx-background-color: #ffffff;
-    -fx-background-radius: 14;
-    -fx-border-radius: 14;
-    -fx-border-color: #e0e0e0;
-    -fx-border-width: 1;
+    -fx-background-color: linear-gradient(to bottom right, #ffffff, #f8f9fc);
+    -fx-background-radius: 18;
+    -fx-border-radius: 18;
+    -fx-border-color: #dcdcdc;
+    -fx-border-width: 1.2;
     -fx-padding: 16;
     -fx-spacing: 12;
     -fx-alignment: center;
-    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 8, 0, 3, 3);
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.08), 8, 0, 3, 3);
     -fx-transition: 0.3s;
 }
 
+.card_infoRT {
+    -fx-background-color: #f4f6f8;
+    -fx-padding: 20;
+    -fx-alignment: center;
+    -fx-spacing: 16;
+    -fx-background-radius: 12;
+}
 
 /* --- Tiêu đề trong mỗi card --- */
 .card-title {
