--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
@@ -31,7 +32,7 @@
             </padding>
 
             <!-- Hàng 1: Thông tin nhân viên và Thông báo -->
-            <HBox prefHeight="270.0" prefWidth="1174.0" spacing="16">
+            <HBox prefHeight="270.0" prefWidth="1040.0" spacing="16">
 
                 <!-- Thông tin nhân viên -->
                 <HBox prefHeight="270.0" prefWidth="695.0" spacing="16" styleClass="info-card">
@@ -72,20 +73,29 @@
 
                 <!-- Thông báo -->
                 <VBox alignment="TOP_CENTER" prefHeight="220.0" prefWidth="369.0" spacing="8" styleClass="notification-card">
-                    <Label styleClass="subtitle" text="🔔 Thông Báo" />
-                    <VBox alignment="CENTER" spacing="6">
-                        <Label styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
-                        <Label styleClass="alert-green" text="HD12082025007 - Đã đến giờ hẹn" />
-                    </VBox>
+               <AnchorPane prefHeight="43.0" prefWidth="315.0">
+                  <children>
+                          <Label layoutX="80.0" prefHeight="35.0" prefWidth="187.0" styleClass="subtitle" text="🔔 Thông Báo" />
+                  </children>
+               </AnchorPane>
+               <AnchorPane prefHeight="207.0" prefWidth="315.0" styleClass="borderNotice">
+                  <children>
+                          <VBox alignment="CENTER" layoutX="42.0" layoutY="18.0" spacing="6">
+                              <Label styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
+                              <Label styleClass="alert-green" text="HD12082025007 - Đã đến giờ hẹn" />
+                          </VBox>
+                  </children>
+               </AnchorPane>
                 </VBox>
 
 
             </HBox>
 
             <!-- Hàng 2: Thống kê -->
-            <HBox alignment="CENTER" prefHeight="195.0" prefWidth="974.0" spacing="16">
+            <HBox alignment="CENTER" prefHeight="200.0" prefWidth="1040.0" spacing="16" styleClass="card_infoRT">
+
                 <!-- Thẻ 1 -->
-                <HBox alignment="CENTER" prefHeight="210.0" prefWidth="245.0" styleClass="stat-card">
+                <HBox alignment="CENTER" prefHeight="155.0" prefWidth="230.0" styleClass="stat-card">
                     <VBox alignment="CENTER_LEFT" spacing="6">
                         <Label styleClass="card-title" text="SỐ ĐƠN" />
                         <Label styleClass="text-green" text="30 Đơn Hoàn Thành" />
@@ -96,7 +106,7 @@
                 </HBox>
 
                 <!-- Thẻ 2 -->
-                <VBox alignment="CENTER" prefHeight="210.0" prefWidth="245.0" styleClass="stat-card">
+                <VBox alignment="CENTER" prefHeight="155.0" prefWidth="230.0" styleClass="stat-card">
                     <Label styleClass="card-title" text="KHU VỰC" />
                     <Label text="IN: 20/40" />
                     <Label text="OUT: 32/50" />
@@ -104,17 +114,19 @@
                 </VBox>
 
                 <!-- Thẻ 3 -->
-                <VBox alignment="CENTER" prefHeight="210.0" prefWidth="245.0" styleClass="stat-card">
+                <VBox alignment="CENTER" prefHeight="155.0" prefWidth="230.0" styleClass="stat-card">
                     <Label styleClass="card-title" text="DOANH THU" />
                     <Label styleClass="money-text" text="12,000,000 VNĐ" />
                 </VBox>
 
                 <!-- Thẻ 4 -->
-                <VBox alignment="CENTER" prefHeight="210.0" prefWidth="245.0" styleClass="stat-card">
+                <VBox alignment="CENTER" prefHeight="155.0" prefWidth="230.0" styleClass="stat-card">
                     <Label styleClass="card-title" text="TỔNG KHÁCH" />
                     <Label styleClass="count-text" text="23" />
                 </VBox>
+
             </HBox>
+
 
 
 
