update avt hình tròn trên thanh sidebar

--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -21,7 +21,7 @@
 
     <!-- Sidebar -->
     <left>
-        <fx:include source="sidebar_QL.fxml" />
+        <fx:include source="sidebar_NV.fxml" />
     </left>
 
     <!-- Main Content -->
