--- a/src/main/resources/FXML/ChonMon.fxml
+++ b/src/main/resources/FXML/ChonMon.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane
+        prefHeight="800.0"
+        prefWidth="1400.0"
+        stylesheets="@../CSS/dashboard.css"
         xmlns="http://javafx.com/javafx/24.0.1"
-        xmlns:fx="http://javafx.com/fxml/1"
-        stylesheets="../CSS/ChonMon.css"
-        prefHeight="Infinity" prefWidth="Infinity"
-        maxHeight="Infinity" maxWidth="Infinity">
+        xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- Sidebar trái -->
     <left>
