--- a/src/main/resources/FXML/ChonMon.fxml
+++ b/src/main/resources/FXML/ChonMon.fxml
@@ -9,7 +9,7 @@
 <BorderPane
         prefHeight="800.0"
         prefWidth="1400.0"
-        stylesheets="@../CSS/dashboard.css"
+        stylesheets="@../CSS/ChonMon.css"
         xmlns="http://javafx.com/javafx/24.0.1"
         xmlns:fx="http://javafx.com/fxml/1">
 
