--- a/src/main/resources/CSS/checkout.css
+++ b/src/main/resources/CSS/checkout.css
@@ -188,11 +188,13 @@
 .section-title {
     -fx-font-size: 18px;
     -fx-font-weight: bold;
-    -fx-background-color: #F5C9A4;
+    -fx-background-color: #E6763E;
     -fx-padding: 8;
     -fx-background-radius: 8;
     -fx-alignment: center;
+    -fx-text-fill: white;
 }
+
 
 .bold-label { -fx-font-weight: bold; }
 .red-label { -fx-text-fill: red; }
@@ -249,4 +251,31 @@
 .confirm-btn:hover {
     -fx-background-color: #43A047;
 }
+/*Thanh Cuộn của ScrollPane*/
+.scroll-bar:vertical {
+    -fx-pref-width: 12px;
+    -fx-background-color: transparent;
+}
 
+.scroll-bar:vertical .track {
+    -fx-background-color: transparent;
+    -fx-background-radius: 16;
+    -fx-padding: 30;
+}
+
+.scroll-bar:vertical .thumb {
+    -fx-background-color: #E6763E;
+    -fx-background-radius: 8;
+    -fx-max-height: 60px;
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.15), 3,0,0,1);
+}
+
+.scroll-bar:vertical .thumb:hover {
+    -fx-background-color: #c1915f;
+}
+.scroll-bar .increment-button,
+.scroll-bar .decrement-button {
+    -fx-opacity: 0;
+    -fx-pref-height: 0;
+    -fx-pref-width: 0;
+}
