--- a/src/main/resources/FXML/CheckOut.fxml
+++ b/src/main/resources/FXML/CheckOut.fxml
@@ -20,8 +20,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
+<?import java.net.URL?>
 <BorderPane prefHeight="800" prefWidth="1400" style="-fx-background-color: #D9D9D9" stylesheets="@../CSS/checkout.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.CheckoutController">
-
     <!-- Sidebar bên trái -->
     <left>
         <fx:include source="sidebar_NV.fxml" />
@@ -224,7 +224,7 @@
 
             <Label text="Mã Giảm Giá:" />
             <HBox spacing="5">
-                <TextField promptText="Nhập mã giảm giá" styleClass="discount-field" HBox.hgrow="ALWAYS" />
+                <TextField promptText="Nhập mã giảm giá" styleClass="filter-tf" HBox.hgrow="ALWAYS" />
                 <Button prefHeight="31.0" prefWidth="28.0" text="📷" />
             </HBox>
 
@@ -245,7 +245,7 @@
             </GridPane>
 
             <Label text="Tiền Khách Đưa:" />
-            <TextField prefHeight="20.0" prefWidth="356.0" promptText="Nhập số tiền khách đưa" styleClass="cash-field" />
+            <TextField prefHeight="20.0" prefWidth="356.0" promptText="Nhập số tiền khách đưa" styleClass="filter-tf" />
             <GridPane alignment="CENTER" hgap="10" style="-fx-background-color: transparent;" vgap="10">
                 <padding>
                     <Insets bottom="10" left="10" right="10" top="10" />
